--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -7,12 +7,13 @@
         },
 
         "formatting.gofumpt": true,
-        "formatting.local": "github.com/drornir/betteractions",
+        "formatting.local": "github.com/drornir/better-actions",
 
         "analyses": {
           "shadow": false,
           "unusedvariable": true,
-          "ST1000": false
+          "ST1000": false,
+          "QF1004": false
         },
         "staticcheck": true,
 
