--- a/examples/workflows/only-runs.yaml
+++ b/examples/workflows/only-runs.yaml
@@ -5,5 +5,5 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello World
-        run: echo "Hello World"
+      - name: print-env
+        run: echo $MY_SPECIAL_ENV_VAR
