create workflow command files

--- a/examples/workflows/only-runs.yaml
+++ b/examples/workflows/only-runs.yaml
@@ -7,3 +7,7 @@ jobs:
     steps:
       - name: print-env
         run: echo $MY_SPECIAL_ENV_VAR
+      - name: store to env
+        run: echo 'inline_env_var=inline' >> $GITHUB_ENV
+      - name: print from inline env var
+        run: echo value is $inline_env_var
