--- a/examples/workflows/env_isolation_test.yaml
+++ b/examples/workflows/env_isolation_test.yaml
@@ -11,6 +11,7 @@ jobs:
             echo "JOB_VAR is not set correctly in subsequent step: $JOB_VAR"
             exit 1
           fi
+          echo "same job env persistence ok"
 
   job-isolation:
     runs-on: local
@@ -21,3 +22,4 @@ jobs:
             echo "JOB_VAR should not be set in a different job: $JOB_VAR"
             exit 1
           fi
+          echo "cross-job env isolation ok"
